# CineForge_v0

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
docs/: LR_ASD_PATCHES.md
frontend/: app.js  index.html  styles.css
helper/: __init__.py  addSubtitle  asdHelper.py  burn.py  cutClips.py  extractAudio.py  extractSubtitles.py  gdrivedownload.py  getEngagingContent.py  normalizeVideo.py  run_all_asd  run_all_asd.py  run_asd.py  runtime.py  srt.py  subtitleParser.py  transcribe.py  video_process.py  whisperx_compat.py  ytdownload.py
scripts/: check_setup.py
