[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown==4.6.0",
    "google-genai>=2.4.0",
    "numpy<2",
    "python-speech-features>=0.6",
    "scenedetect==0.5.6",
    "yt-dlp>=2026.3.17",
]
