[project]
name = "cineforge-backend"
version = "0.1.0"
description = "FastAPI backend for generating short clips from long-form videos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "gdown==4.6.0",
    "httpx>=0.28.1",
    "numpy<2",
    "nvidia-cudnn-cu12==8.9.7.29",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.2.2",
    "python-speech-features>=0.6",
    "scenedetect==0.5.6",
    "torchvision>=0.27.1",
    "whisperx>=3.3.1",
    "yt-dlp>=2026.3.17",
]
